--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-collapsible": "^2.10.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.4",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
