--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-config-next": "13.5.2",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
-    "next": "13.5.2",
+    "next": "^13.5.11",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-calendar": "^4.6.0",
